# markitdown-pdf-plus

./: .env.example  .gitignore  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  vulture_whitelist.py
.claude/skills/pdf-plus-dev/: SKILL.md
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: API.md
docs/memory/: 01-project-context.md  02-research-and-benchmarks.md  03-build-findings.md  04-roadmap-v0.2-tatr.md  05-mistral-ocr-4-assessment.md  README.md
docs/superpowers/plans/: 2026-06-06-markitdown-pdf-plus.md
docs/superpowers/specs/: 2026-06-06-markitdown-pdf-plus-design.md
droid-wiki/: .wiki-meta.json  by-the-numbers.md  fun-facts.md  lore.md
droid-wiki/background/: build-findings.md  design-decisions.md  index.md  research-and-benchmarks.md  roadmap.md
droid-wiki/features/: full-page-mode.md  index.md  structure-extraction.md  vlm-tables-and-captions.md
droid-wiki/how-to-contribute/: debugging.md  development-workflow.md  index.md  patterns-and-conventions.md  testing.md  tooling.md
droid-wiki/overview/: architecture.md  getting-started.md  glossary.md  index.md
droid-wiki/reference/: configuration.md  data-models.md  dependencies.md  index.md
droid-wiki/systems/: figures.md  heading-detection.md  index.md  orchestration.md  table-handling.md  text-extraction.md  vlm-service.md
scripts/: gen_api_docs.py  validate_docs.py
src/markitdown_pdf_plus/: __init__.py  _assemble.py  _backends.py  _concurrency.py  _converter.py  _extract.py  _figures.py  _headings.py  _merge.py  _mistral.py  _model.py  _paddleocr.py  _tables.py  _vlm.py
tests/: conftest.py  test_assemble.py  test_converter.py  test_extract.py  test_figures.py  test_headings.py  test_integration.py  test_judge.py  test_merge.py  test_mistral.py  test_model.py  test_paddleocr.py  test_plugin.py  test_tables.py  test_teds.py  test_vlm.py
tests/eval/: __init__.py  judge.py  run_eval.py  teds.py
