[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markitdown-pdf-plus"
version = "0.1.0"
description = "MarkItDown plugin: font-heuristic structure + opt-in VLM tables/figures for PDFs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "markitdown>=0.1.5",
  "pdfplumber>=0.11",
  "pypdfium2>=4",
  "Pillow>=10",
]

[project.optional-dependencies]
test = ["pytest>=8", "reportlab>=4"]

[project.entry-points."markitdown.plugin"]
pdf_plus = "markitdown_pdf_plus"

[tool.hatch.build.targets.wheel]
packages = ["src/markitdown_pdf_plus"]
